# learning-langchain

./: .gitignore  agent-tool-memory.py  agent_tool_calling.py  function_calling_agents.py  insert-calendar.py  lab-test.py  pyproject.toml  requirements.txt
src/academy-introduction/module-1/: 1.1_foundational_models.ipynb
